--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "homepage": "https://github.com/aave/lens-protocol#readme",
   "devDependencies": {
+    "@aws-sdk/client-s3": "^3.359.0",
     "@nomiclabs/hardhat-ethers": "2.0.2",
     "@nomiclabs/hardhat-etherscan": "2.1.8",
     "@typechain/ethers-v5": "8.0.5",
@@ -71,6 +72,7 @@
     }
   },
   "dependencies": {
+    "@bundlr-network/client": "^0.11.6",
     "@openzeppelin/contracts": "4.5.0"
   },
   "author": "Lens",
